Added letter spacing to headers

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ content {
     height: 100vh;
     font-family: 'Permanent Marker', sans-serif;
     font-size: 36px;
+    letter-spacing: 4px;
     color: var(--color-yellow-light);
 }
 
